--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   intl:
   http: ^0.13.2
   flutter_dotenv: ^3.1.0
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
